# TEE-GNN

./: .gitignore  README.md  gcn_train.py  teegnn_build.sh
.claude/: settings.local.json
CSPRNG/: Makefile  csprng_demo  main.c  ta_example.c
TEEGNN/: CMakeLists.txt  Makefile  README.md  secGCN.h  test.cpp  util.cpp  util.h
TEEGNN-opt/host/: teegnn_main.cpp
TEEGNN-opt/host/include/: csprng_adapter.hpp  dataset_loader.hpp  gcn_ops.hpp  graph.hpp  masks.hpp  types.hpp
TEEGNN-opt/host/src/: dataset_loader.cpp  gcn_ops.cpp  masks.cpp
TEEGNN-opt/include/: csprng_adapter_c.h  teegnn_ta.h
TEEGNN-opt/src/: csprng.c
TEEGNN-opt/ta/: manifest.json  sub.mk  teegnn_ta.c
TEEGNN/host/: Makefile  main.c  tee_gnn_client.cpp  teegnn_main.cpp
TEEGNN/host/include/: blocked_csc.hpp  csprng_adapter.hpp  gcn_ops.hpp  graph.hpp  masks.hpp  tee_gnn_client.h  tee_gnn_client.hpp  types.hpp  util.hpp
TEEGNN/host/src/: blocked_csc.cpp  blocked_edge_list.c  csc_graph.cpp  csprng_adapter.cpp  dataset_loader.cpp  edge_list.c  graph.cpp  masks.cpp  tee_gnn_client.cpp  util.cpp
TEEGNN/include/: blocked_csc.h  blocked_edge_list.h  crypto.h  csc_graph.h  edge_list.h  teegnn_error.h  teegnn_ta.h
TEEGNN/src/: blocked_csc.c  crypto_openssl.c  csc_graph.cpp  csprng_adapter_c.c  scan.c
TEEGNN/ta/: Makefile  sub.mk  teegnn_ta.c  user_ta_header_defines.h
TEEGNN/ta/include/: csprng.h  csprng_adapter_c.h  scan.h  teegnn_ta.h
TEEGNN/ta/src/: blocked_edge_list.c  crypto_optee.c  csc_graph.c  csprng_adapter_c.c  edge_list.c  scan.c
common/: Makefile  test.cpp  test_sdim
common/include/: csprng_adapter.hpp  masks.hpp  types.hpp
common/src/: csprng_adapter.cpp  gcn_ops.cpp  graph.cpp  masks.cpp
dataset/: format.py
dataset/citeseer/: edges.txt  w1.txt  w2.txt
dataset/cora/: secgcn_output.txt  w1.txt  w2.txt
dataset/naive_test/: edges.txt  features.txt  output.txt  sec_output.txt  w2.txt  weight1.txt
dataset/pubmed/: edges.txt  secgcn_output.txt  w1.txt  w2.txt
nonTEE/: CMakeLists.txt  README.md  teegnn_sim_main.cpp
plaintext/: CMakeLists.txt  GCN.h  README.md  graph.h  plaintext_main.cpp
